--- a/ACL4SSR_Online_Full_lohome_meta.ini
+++ b/ACL4SSR_Online_Full_lohome_meta.ini
@@ -77,25 +77,23 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔗 Relay`[]⛓ Relay2`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🔥 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔗 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🔥 手动切换`[]DIRECT
 custom_proxy_group=🔥 手动切换`select`.*
 custom_proxy_group=🔗 Relay`relay`[]🔥 手动切换`(0xVmessWsNoTlsRealy2)
-custom_proxy_group=⛓ Relay2`relay`[]♻️ 自动选择`(0xVmessWsNoTlsRealy2)
 custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(港|香港|HK|Hong Kong|Hongkong|0x|高峰|流媒体)).*)`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=💰 Binance`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|台|新北|彰化|TW|Taiwan|新加坡|坡|狮城|SG|Singapore|KR|Korea|KOR|首尔|韩|韓|港|HK|Hong Kong)(?!.*(高峰|拥挤))
 custom_proxy_group=💰 加密货币`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|台|新北|彰化|TW|Taiwan|新加坡|坡|狮城|SG|Singapore|KR|Korea|KOR|首尔|韩|韓|港|HK|Hong Kong)(?!.*(高峰|拥挤))
-custom_proxy_group=🤖 AI服务`select`[]🗽 AI解锁`(0x|California|Singapore|美|US|ChatGPT|印度|德国|英国|加拿大|台|新北|彰化|TW|Taiwan)(?!.*(高峰|拥挤))
-custom_proxy_group=👨‍💻‍ Github`select`[]🔗 Relay`[]⛓ Relay2`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🚀 节点选择`[]🔥 手动切换
-custom_proxy_group=📹 油管视频`select`[]🔗 Relay`[]⛓ Relay2`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🚀 节点选择`[]🔥 手动切换
-custom_proxy_group=💬 自由消息`select`[]🔗 Relay`[]⛓ Relay2`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🚀 节点选择`[]🔥 手动切换
-custom_proxy_group=📢 谷歌`select`[]DIRECT`[]🔗 Relay`[]⛓ Relay2`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🚀 节点选择`[]🔥 手动切换
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🔗 Relay`[]⛓ Relay2`[]🇺🇲 美国节点`[]🚀 节点选择`[]🔥 手动切换
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🔗 Relay`[]⛓ Relay2`[]🇺🇲 美国节点`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|解锁|US|United States|ChatGPT)
+custom_proxy_group=🤖 AI服务`select`(Relay｜0x|California|Singapore|美|US|ChatGPT|印度|德国|英国|加拿大|台|新北|彰化|TW|Taiwan)(?!.*(高峰|拥挤))
+custom_proxy_group=👨‍💻‍ Github`select`[]🔗 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🚀 节点选择`[]🔥 手动切换
+custom_proxy_group=📹 油管视频`select`[]🔗 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🚀 节点选择`[]🔥 手动切换
+custom_proxy_group=💬 自由消息`select`[]🔗 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🚀 节点选择`[]🔥 手动切换
+custom_proxy_group=📢 谷歌`select`[]DIRECT`[]🔗 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🚀 节点选择`[]🔥 手动切换
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🔗 Relay`[]🇺🇲 美国节点`[]🚀 节点选择`[]🔥 手动切换
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🔗 Relay`[]🇺🇲 美国节点`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|解锁|US|United States|ChatGPT)
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🔥 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🔥 手动切换`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]DIRECT
-custom_proxy_group=🗽 AI解锁`url-test`(GPT|美国|US|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|印度|德国|英国|加拿大)(?!.*(高峰|拥挤))`http://www.gstatic.com/generate_204`300,,300
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
