--- a/ACL4SSR_Online_Full_lohome_meta.ini
+++ b/ACL4SSR_Online_Full_lohome_meta.ini
@@ -114,6 +114,6 @@ custom_proxy_group=🛴 赔钱机场`url-test`!!GROUP=peiqian`http://www.gstatic
 enable_rule_generator=true
 overwrite_original_rules=true
 
-clash_rule_base=https://raw.githubusercontent.com/CuminLo/clash-rules/master/GeneralClashConfig_lohome_meta.yml
+clash_rule_base=https://raw.githubusercontent.com/CuminLo/clash-rules/main/GeneralClashConfig_lohome_meta.yaml
 
 ;luck
