--- a/ACL4SSR_Online_Full_lohome_meta_mac.ini
+++ b/ACL4SSR_Online_Full_lohome_meta_mac.ini
@@ -83,7 +83,7 @@ custom_proxy_group=🔗 Relay`relay`[]🔥 手动切换`(0xVmessWsNoTlsRealy2)
 custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(港|香港|HK|Hong Kong|Hongkong|0x|高峰|流媒体)).*)`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=💰 Binance`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|台|新北|彰化|TW|Taiwan|新加坡|坡|狮城|SG|Singapore|KR|Korea|KOR|首尔|韩|韓|港|HK|Hong Kong)(?!.*(高峰|拥挤))
 custom_proxy_group=💰 加密货币`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|台|新北|彰化|TW|Taiwan|新加坡|坡|狮城|SG|Singapore|KR|Korea|KOR|首尔|韩|韓|港|HK|Hong Kong)(?!.*(高峰|拥挤))
-custom_proxy_group=🤖 AI服务`select`(Relay｜0x|California|Singapore|美|US|ChatGPT|印度|德国|英国|加拿大|台|新北|彰化|TW|Taiwan)(?!.*(高峰|拥挤))
+custom_proxy_group=🤖 AI服务`select`(0x|California|Singapore|美|US|ChatGPT|印度|德国|英国|加拿大|台|新北|彰化|TW|Taiwan)(?!.*(高峰|拥挤))`[]🔗 Relay
 custom_proxy_group=👨‍💻‍ Github`select`[]🔗 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🚀 节点选择`[]🔥 手动切换
 custom_proxy_group=📹 油管视频`select`[]🔗 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🚀 节点选择`[]🔥 手动切换
 custom_proxy_group=💬 自由消息`select`[]🔗 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🚀 节点选择`[]🔥 手动切换
