--- a/ACL4SSR_Online_Full_lohome_meta_android.ini
+++ b/ACL4SSR_Online_Full_lohome_meta_android.ini
@@ -87,7 +87,7 @@ custom_proxy_group=🤖 AI服务`select`(0x|California|Singapore|美|US|ChatGPT|
 custom_proxy_group=👨‍💻‍ Github`select`[]🔗 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🚀 节点选择`[]🔥 手动切换
 custom_proxy_group=📹 油管视频`select`[]🔗 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🚀 节点选择`[]🔥 手动切换
 custom_proxy_group=💬 自由消息`select`[]🔗 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🚀 节点选择`[]🔥 手动切换
-custom_proxy_group=📢 谷歌`select`[]DIRECT`[]🔗 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🚀 节点选择`[]🔥 手动切换
+custom_proxy_group=📢 谷歌`select`[]🔗 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🚀 节点选择`[]🔥 手动切换
 custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🔗 Relay`[]🇺🇲 美国节点`[]🚀 节点选择`[]🔥 手动切换
 custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🔗 Relay`[]🇺🇲 美国节点`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|解锁|US|United States|ChatGPT)
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🔥 手动切换
