--- a/ACL4SSR_Online_Full_lohome_meta_android.ini
+++ b/ACL4SSR_Online_Full_lohome_meta_android.ini
@@ -22,11 +22,11 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/CuminLo/clash-rules/
 ruleset=💰 Binance,https://raw.githubusercontent.com/CuminLo/clash-rules/master/Binance.list
 ruleset=💰 Binance,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Binance.list
 ruleset=💰 加密货币,https://raw.githubusercontent.com/CuminLo/clash-rules/master/Crypto.list
-#ruleset=💰 加密货币,https://raw.githubusercontent.com/CuminLo/clash-rules/master/CryptoOption.list
+;ruleset=💰 加密货币,https://raw.githubusercontent.com/CuminLo/clash-rules/master/CryptoOption.list
 ruleset=🤖 AI服务,https://raw.githubusercontent.com/CuminLo/clash-rules/master/AI.list
 ruleset=🤖 AI服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-#ruleset=🎯 全球直连,https://raw.githubusercontent.com/CuminLo/clash-rules/master/Company.list
+;ruleset=🎯 全球直连,https://raw.githubusercontent.com/CuminLo/clash-rules/master/Company.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ExaAlice/Alice/main/Rule/DIRECT.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
@@ -42,12 +42,12 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-#ruleset=🍎 苹果服务,https://raw.githubusercontent.com/CuminLo/clash-rules/master/Apple.list
+;ruleset=🍎 苹果服务,https://raw.githubusercontent.com/CuminLo/clash-rules/master/Apple.list
 ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
 ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
-ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
+;ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
 ruleset=📹 油管视频,https://raw.githubusercontent.com/CuminLo/clash-rules/master/Youtube.list
 ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=📢 谷歌,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
@@ -55,7 +55,7 @@ ruleset=📢 谷歌,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=📢 谷歌,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCN.list
 ruleset=📢 谷歌,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
 ruleset=👨‍💻‍ Github,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Github.list
-#ruleset=👨‍💻‍ Github,https://raw.githubusercontent.com/CuminLo/clash-rules/master/Github.list
+;ruleset=👨‍💻‍ Github,https://raw.githubusercontent.com/CuminLo/clash-rules/master/Github.list
 ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=💬 自由消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
@@ -65,7 +65,7 @@ ruleset=💬 自由消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=💬 自由消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Discord.list
 ruleset=💬 自由消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/TikTok.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-#ruleset=🚀 节点选择,https://raw.githubusercontent.com/CuminLo/clash-rules/master/Proxy.list
+;ruleset=🚀 节点选择,https://raw.githubusercontent.com/CuminLo/clash-rules/master/Proxy.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIpV6.list
