--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -180,3 +180,5 @@ dns:
     - shark007.net
     - ntp.ntsc.ac.cn
     - '*.mcdn.bilivideo.cn'
+tunnels:
+  - tcp/udp,172.16.0.2:51820,162.159.193.10:7156,🔥 手动切换
