--- a/ACL4SSR_Online_Full_lohome_meta_android.ini
+++ b/ACL4SSR_Online_Full_lohome_meta_android.ini
@@ -77,7 +77,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔗 Relay`[]🖇 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]👻 BySelf`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🛵 两元店`[]🛴 赔钱机场`[]🔥 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔗 Relay`[]🖇 Relay`[]🫧 泡泡狗`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🔥 手动切换`[]DIRECT
 custom_proxy_group=🔥 手动切换`select`.*
 custom_proxy_group=🔗 Relay`relay`[]🔥 手动切换`[]👻 BySelf
 custom_proxy_group=🖇 Relay`relay`[]🔥 手动切换`[]🤹 BySelf
@@ -110,6 +110,7 @@ custom_proxy_group=📮 EEVPN`url-test`!!GROUP=eevpn`http://www.gstatic.com/gene
 custom_proxy_group=🚲 性价比`url-test`!!GROUP=zhilian`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🛵 两元店`url-test`!!GROUP=liangyuandian`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=🛴 赔钱机场`url-test`!!GROUP=peiqian`http://www.gstatic.com/generate_204`300,,100
+custom_proxy_group=🫧 泡泡狗`url-test`!!GROUP=paopao`http://www.gstatic.com/generate_204`300,,100
 
 ;设置分组标志位
 
