--- a/ACL4SSR_Online_Full_lohome_meta_mac.ini
+++ b/ACL4SSR_Online_Full_lohome_meta_mac.ini
@@ -79,16 +79,16 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔗 Relay`[]🖇 Relay`[]🫧 泡泡狗`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🈚️ 一元机场`[]🚅 三分机场`[]📮 EEVPN`[]🚲 性价比`[]🔥 手动切换`[]DIRECT
 custom_proxy_group=🔥 手动切换`select`.*
-custom_proxy_group=🔗 Relay`relay`[]🔥 手动切换`[]👻 BySelf
+custom_proxy_group=🔗 Relay`relay`[]🫧 泡泡狗`[]👻 BySelf
 custom_proxy_group=🖇 Relay`relay`[]🔥 手动切换`[]🤹 BySelf
 custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(港|香港|HK|Hong Kong|Hongkong|0x|高峰|流媒体)).*)`http://www.gstatic.com/generate_204`300,,100
 custom_proxy_group=💰 Binance`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|台|新北|彰化|TW|Taiwan|新加坡|坡|狮城|SG|Singapore|KR|Korea|KOR|首尔|韩|韓)(?!.*(高峰|拥挤))
 custom_proxy_group=💰 加密货币`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|台|新北|彰化|TW|Taiwan|新加坡|坡|狮城|SG|Singapore|KR|Korea|KOR|首尔|韩|韓|港|HK|Hong Kong)(?!.*(高峰|拥挤))
 custom_proxy_group=🤖 AI服务`select`(0x|California|Singapore|美|US|ChatGPT|印度|德国|英国|加拿大|台|新北|彰化|TW|Taiwan)(?!.*(高峰|拥挤))`[]🔗 Relay`[]🖇 Relay
-custom_proxy_group=👨‍💻‍ Github`select`[]🔗 Relay`[]🖇 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇬🇧 英国节点`[]🈚️ 一元机场`[]🚅 三分机场`[]🚲 性价比`[]🛵 两元店`[]🚀 节点选择
-custom_proxy_group=📹 油管视频`select`[]🔗 Relay`[]🖇 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇬🇧 英国节点`[]🈚️ 一元机场`[]🚅 三分机场`[]🚲 性价比`[]🛵 两元店`[]🚀 节点选择
-custom_proxy_group=💬 自由消息`select`[]🔗 Relay`[]🖇 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇬🇧 英国节点`[]🈚️ 一元机场`[]🚅 三分机场`[]🚲 性价比`[]🛵 两元店`[]🚀 节点选择
-custom_proxy_group=📢 谷歌`select`[]🔗 Relay`[]🖇 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇬🇧 英国节点`[]🈚️ 一元机场`[]🚅 三分机场`[]🚲 性价比`[]🛵 两元店`[]🚀 节点选择
+custom_proxy_group=👨‍💻‍ Github`select`[]🔗 Relay`[]🖇 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇬🇧 英国节点`[]🚀 节点选择`[]🔥 手动切换
+custom_proxy_group=📹 油管视频`select`[]🔗 Relay`[]🖇 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇬🇧 英国节点`[]🚀 节点选择`[]🔥 手动切换
+custom_proxy_group=💬 自由消息`select`[]🔗 Relay`[]🖇 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇬🇧 英国节点`[]🚀 节点选择`[]🔥 手动切换
+custom_proxy_group=📢 谷歌`select`[]🔗 Relay`[]🖇 Relay`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇬🇧 英国节点`[]🚀 节点选择`[]🔥 手动切换
 custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🔗 Relay`[]🖇 Relay`[]🇺🇲 美国节点`[]🚀 节点选择`[]🔥 手动切换
 custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🔗 Relay`[]🖇 Relay`[]🇺🇲 美国节点`[]🚀 节点选择`[]🔥 手动切换
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🔗 Relay`[]🖇 Relay`[]🇺🇲 美国节点`[]🚀 节点选择`[]🔥 手动切换
