--- a/GeneralClashConfig_lohome_meta.yaml
+++ b/GeneralClashConfig_lohome_meta.yaml
@@ -14,7 +14,7 @@ allow-lan: true
 bind-address: '*'
 ipv6: true
 find-process-mode: off
-log-level: debug
+log-level: info
 mode: rule
 external-controller: 0.0.0.0:9090
 experimental:
