--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -17,6 +17,7 @@ find-process-mode: strict
 log-level: debug
 mode: rule
 external-controller: 0.0.0.0:9090
+external-ui: clash/Yacd-meta
 experimental:
   sniff-tls-sni: true
 unified-delay: true
@@ -34,7 +35,7 @@ tun:
     - any:53
     - tcp://any:53
     - 198.18.0.2:53
-    - 28.0.0.1.2:53
+    - 28.0.0.2:53
   auto-redir: true
   auto-route: true
   auto-detect-interface: true
