--- a/ACL4SSR_Online_Full_lohome_meta_android.ini
+++ b/ACL4SSR_Online_Full_lohome_meta_android.ini
@@ -20,6 +20,10 @@
 ruleset=!!import:https://raw.githubusercontent.com/CuminLo/clash-rules/master/rulesets.txt
 ;设置规则标志位
 
+;设置分组标志位
+custom_proxy_group=!!import:https://raw.githubusercontent.com/CuminLo/clash-rules/master/groups.txt
+;设置分组标志位
+
 enable_rule_generator=true
 overwrite_original_rules=true
 
