--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -78,6 +78,7 @@ dns:
     - "+.nlsaas.com"
     - "+.czb365.com"
     - "+.tencentcdb.com"
+    - "+.dnsapi.cn"
     - "+.10010.com"
     - "*.lan"
     - "*.localdomain"
