add "+.oray.net" 蒲公英

--- a/GeneralClashConfig_lohome_meta.yaml
+++ b/GeneralClashConfig_lohome_meta.yaml
@@ -81,6 +81,7 @@ dns:
     - "+.dnsapi.cn"
     - "+.10010.com"
     - "+.lan"
+    - "+.oray.net"
     - "+.localdomain"
     - "+.example"
     - "+.invalid"
