--- a/GeneralClashConfig_lohome_meta_android.yaml
+++ b/GeneralClashConfig_lohome_meta_android.yaml
@@ -11,8 +11,11 @@ socks-port: 7891
 redir-port: 7892
 mixed-port: 7893
 tproxy-port: 7895
-allow-lan: true
+allow-lan: false
 bind-address: '*'
+secret: xxooooxx
+authentication:
+  - "admin:xxooooxx"
 ipv6: true
 find-process-mode: strict
 log-level: debug
