--- a/GeneralClashConfig_lohome_meta.yaml
+++ b/GeneralClashConfig_lohome_meta.yaml
@@ -13,7 +13,11 @@ mixed-port: 7893
 tproxy-port: 7895
 allow-lan: true
 bind-address: '*'
+skip-auth-prefixes:
+  - 127.0.0.1/8
+  - ::1/128
 ipv6: false
+keep-alive-interval: 30
 find-process-mode: off
 log-level: info
 mode: rule
@@ -24,6 +28,8 @@ unified-delay: true
 tcp-concurrent: false
 global-client-fingerprint: chrome
 geodata-loader: standard
+geo-auto-update: true
+geo-update-interval: 24
 geox-url:
   geoip: "https://ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip.dat"
   geosite: "https://ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat"
