--- a/GeneralClashConfig_lohome_meta.yaml
+++ b/GeneralClashConfig_lohome_meta.yaml
@@ -17,7 +17,6 @@ skip-auth-prefixes:
   - 127.0.0.1/8
   - ::1/128
 ipv6: false
-keep-alive-interval: 30
 find-process-mode: off
 log-level: info
 mode: rule
@@ -28,6 +27,7 @@ global-client-fingerprint: chrome
 geodata-loader: standard
 geo-auto-update: true
 geo-update-interval: 24
+keep-alive-interval: 30
 geox-url:
   geoip: "https://ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip.dat"
   geosite: "https://ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat"
@@ -41,6 +41,7 @@ tun:
   auto-redir: true
   auto-route: true
   auto-detect-interface: true
+  device: Meta
 profile:
   store-selected: true
   store-fake-ip: true
