--- a/GeneralClashConfig_lohome_meta_android.yaml
+++ b/GeneralClashConfig_lohome_meta_android.yaml
@@ -49,6 +49,7 @@ tun:
   device: Meta
   route-exclude-address-set:
     - cncidr
+    - customcidr
 profile:
   store-selected: true
   store-fake-ip: true
