--- a/GeneralClashConfig_lohome_meta.yaml
+++ b/GeneralClashConfig_lohome_meta.yaml
@@ -38,8 +38,9 @@ tun:
   dns-hijack:
     - any:53
     - tcp://any:53
-  auto-redir: true
+  auto-redirect: true
   auto-route: true
+  strict-route: true
   auto-detect-interface: true
   device: Meta
 profile:
