--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -59,22 +59,12 @@ dns:
     - 223.5.5.5
     - 119.29.29.29
   nameserver-policy:
-    "geosite:cn,private":
-      - https://doh.apad.pro/dns-query
-      - https://doh.pub/dns-query
-    "geosite:google":
-      - tls://8.8.4.4
-      - https://doh.apad.pro/dns-query
-    "geosite:geolocation-!cn":
-      - tls://8.8.4.4
-      - https://doh.apad.pro/dns-query
+    "geosite:cn,private": [tls://8.8.4.4, https://dns.alidns.com/dns-query, https://doh.pub/dns-query]
+    "geosite:google": [tls://8.8.4.4, https://doh.apad.pro/dns-query, https://1.0.0.1/dns-query]
+    "geosite:geolocation-!cn": [tls://8.8.4.4, https://doh.apad.pro/dns-query, https://1.0.0.1/dns-query]
     "geosite:category-ads-all": rcode://success
-  proxy-server-nameserver:
-    - https://dns.alidns.com/dns-query
-    - https://doh.pub/dns-query
-  nameserver:
-    - https://doh.apad.pro/dns-query
-    - https://doh.pub/dns-query
+  proxy-server-nameserver: [tls://8.8.4.4, https://doh.apad.pro/dns-query, https://1.0.0.1/dns-query]
+  nameserver: [tls://8.8.4.4, https://doh.apad.pro/dns-query, https://1.0.0.1/dns-query, https://dns.alidns.com/dns-query]
   fake-ip-filter:
     - "WORKGROUP"
     - "apps.apple.com"
