--- a/GeneralClashConfig_lohome_meta.yaml
+++ b/GeneralClashConfig_lohome_meta.yaml
@@ -77,6 +77,8 @@ dns:
     - "+.shylwlkj.com"
     - "+.nlsaas.com"
     - "+.nlktj.cn"
+    - "+.lingnengsaas.com"
+    - "+.unicornenergy.cn"
     - "+.czb365.com"
     - "+.tencentcdb.com"
     - "+.dnsapi.cn"
